Bug 1766347 - Fix comma warnings in Windows builds. r=media-playback-reviewers,bryce

media/gmp-clearkey/0.1/WMFH264Decoder.cpp(145,24): error: possible misuse of comma operator here [-Werror,-Wcomma]
  while (type = nullptr,
                       ^
media/gmp-clearkey/0.1/WMFH264Decoder.cpp(145,10): note: cast expression to void to silence warning
  while (type = nullptr,
         ^~~~~~~~~~~~~~
         static_cast<void>( )

Differential Revision: https://phabricator.services.mozilla.com/D144641